<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".view.gvpCityAdmin.CityAdminForm">

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="version : 1.25" />

        <TextView
            android:id="@+id/selected_ward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic"
            tools:text="dummy ward 5" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardElevation="5dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:background="@android:color/darker_gray"
                    android:contentDescription="@string/image_placeholder" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/captureImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/capture_image"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/removeImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:padding="10dp"
                        android:text="@string/remove_image"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_text_bg"
                    android:padding="10dp">

                    <Spinner
                        android:id="@+id/categoryList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:entries="@array/gvp_category_list" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@mipmap/down" />
                </RelativeLayout>


                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:autoSizeMaxTextSize="@dimen/text_18"
                    android:autoSizeMinTextSize="@dimen/text_12"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="left|top"
                    android:hint="@string/address"
                    android:lines="3"
                    android:maxLines="3"
                    android:focusable="false"
                    android:padding="5dp"
                    android:textIsSelectable="true" />

                <EditText
                    android:id="@+id/et_landmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="left|top"
                    android:lines="2"
                    android:maxLines="2"
                    android:hint="@string/landmark"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/et_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="left|top"
                    android:hint="@string/comment"
                    android:lines="4"
                    android:maxLines="6"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:text="@string/action_submit"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_18" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>